--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -455,7 +455,7 @@
 
 <section id="divider" class="well" style="margin-bottom: 80px; background: #333;background-image: url('https://images.pexels.com/photos/902288/pexels-photo-902288.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');background-position-y:75%; 
 				">	
-    <div style="padding: 100px 0;min-height: 400px;background-color: rgba(0,0,0,0.85);">
+    <div style="padding: 100px 0;min-height: 400px;background-color: rgba(0,0,0,0.85);" id="count-section">
         <header class="container text-center">
             <h2 class="section-header">MORE THAN 100 STORE USE POSLITE</h2>
             <p class="lead">Number of happy POSLite users in different part of Philippines</p>
@@ -465,19 +465,19 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="text-center">
-                            <span class="count">48</span><br/>
+                            <span class="count" id="luzon">0</span><br/>
                             <span class="place">Luzon</span>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-center">
-                            <span class="count">34</span><br/>
+                            <span class="count" id="visayas">0</span><br/>
                             <span class="place">Visayas</span>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-center">
-                            <span class="count">25</span><br/>
+                            <span class="count" id="mindanao">0</span><br/>
                             <span class="place">Mindanao</span>
                         </div>
                     </div>
