--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -369,3 +369,255 @@ input[type=checkbox]:checked + label {
 .test {
     color:blue;
 }
+
+input.is-invalid,
+textarea.is-invalid 
+{
+    border:solid 1px #dc3545;
+}
+ 
+
+.start-header {
+	opacity: 1;
+	transform: translateY(0);
+	padding: 10px 0;
+	box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
+	-webkit-transition : all 0.3s ease-out;
+	transition : all 0.3s ease-out;
+}
+.start-header.scroll-on {
+	box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
+	padding: 5px 0;
+	-webkit-transition : all 0.3s ease-out;
+	transition : all 0.3s ease-out;
+}
+.start-header.scroll-on .navbar-brand img{
+	height: 28px;
+	-webkit-transition : all 0.3s ease-out;
+	transition : all 0.3s ease-out;
+}
+.navigation-wrap{
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 1000;
+	-webkit-transition : all 0.3s ease-out;
+	transition : all 0.3s ease-out;
+}
+.navbar{
+	padding: 0;
+}
+.navbar-brand img{
+	height: 35px;
+	width: auto;
+	display: block;
+	-webkit-transition : all 0.3s ease-out;
+	transition : all 0.3s ease-out;
+}
+.navbar-toggler {
+	float: right;
+	border: none;
+	padding-right: 0;
+}
+.navbar-toggler:active,
+.navbar-toggler:focus {
+	outline: none;
+}
+.navbar-light .navbar-toggler-icon {
+	width: 24px;
+	height: 17px;
+	background-image: none;
+	position: relative;
+	border-bottom: 1px solid #000;
+    transition: all 300ms linear;
+}
+.navbar-light .navbar-toggler-icon:after, 
+.navbar-light .navbar-toggler-icon:before{
+	width: 24px;
+	position: absolute;
+	height: 1px;
+	background-color: #000;
+	top: 0;
+	left: 0;
+	content: '';
+	z-index: 2;
+    transition: all 300ms linear;
+}
+.navbar-light .navbar-toggler-icon:after{
+	top: 8px;
+}
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
+	transform: rotate(45deg);
+}
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
+	transform: translateY(8px) rotate(-45deg);
+}
+.navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
+	border-color: transparent;
+}
+.nav-link{
+	color: #212121 !important;
+	font-weight: 500;
+    transition: all 200ms linear;
+}
+.nav-item:hover .nav-link{
+	color: #56CCF2 !important;
+}
+
+.nav-item.menu-active .nav-link {
+	color: #56CCF2 !important;
+}
+
+ 
+.nav-item.active .nav-link{
+	color: #777 !important;
+}
+.nav-link {
+	position: relative;
+	padding: 5px 0 !important;
+	display: inline-block;
+}
+.nav-item:after,
+.nav-item.menu-active:after{
+	position: absolute;
+	bottom: -5px;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	content: '';
+	background-color: #56CCF2;
+	opacity: 0;
+    transition: all 200ms linear;
+}
+.nav-item:hover:after{
+	bottom: 0;
+	opacity: 1;
+}
+
+
+.nav-item.active:hover:after{
+	opacity: 0;
+}
+.nav-item{
+	position: relative;
+    transition: all 200ms linear;
+}
+
+.nav-item .nav-link {
+    font-size: 14.5px;
+}
+
+
+.nav-item.menu-active:after { 
+	bottom:0 !important;
+	opacity: 1 !important;
+	 
+}
+
+@media only screen and (max-width: 990px) {
+
+    .navbar-right {
+        display:none;
+    }
+}
+
+@media (min-width: 768px) {
+    .ml-md-4, .mx-md-4 {
+        margin-left: 1.5rem!important;
+    }
+
+    .navbar-right {
+        margin-left: 1.5em;
+    }
+
+    .navbar-nav {
+        float:none;
+        margin:0 auto;
+        display: block;
+        text-align: center;
+    }
+    
+    .navbar-nav > li {
+        display: inline-block;
+        float:none;
+    }
+
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+#nav-menu-container ul li.menu-active a {
+    color: #56CCF2;
+}
+
+input[type="submit"]:disabled {
+	opacity: 0.8;
+	cursor: not-allowed;
+}
+
+@media only screen and (max-width: 1200px) {
+    #header-carousel {
+        padding: 33px 40px 91px 31px;
+    }
+}
+
+
+@media only screen and (max-width: 991px) {
+    #header-carousel {
+        padding: 27px 40px 91px 24px;
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+	#pc-wrapper {
+		margin-top: 21%;
+	}
+	
+	#header-carousel {
+        padding: 19px 34px 90px 15px;
+	}
+	
+	#home {
+		margin-bottom: 160px;
+	}
+} 
+
+@media only screen and (max-width:767px) {
+	#pc-wrapper {
+		margin-top:22%;
+	}
+
+	#header-carousel {
+		padding: 16px 29px 88px 12px !important;
+	}
+
+	#home {
+		margin-bottom:0;
+	}
+
+	#carousel-reviews .carousel-item {
+		padding: 0 20px;
+	}
+
+	#counter .col-md-4 {
+		min-height: 190px;
+	}
+
+	#count-section {
+		padding-bottom: 20px !important;
+	}
+
+}
+
+@media only screen and (max-width: 375px) {
+	#header-carousel {
+		padding: 13px 27px 88px 12px !important;
+	}
+	#pc-wrapper {
+		margin-top: 27%;
+	}
+}
