--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -279,7 +279,7 @@
                                 <div class="row"> 
                                     <div class="col-md-4 col-sm-6">
                                         <div class="block-text rel zmin">
-                                            <a title="" href="#">Magandang Gamitin sa Negosyo</a>
+                                            <a title="" href="javascript:void(0)">Magandang Gamitin sa Negosyo</a>
                                             <div class="mark">My rating: 
                                                 <span class="rating-input">
                                                     <span data-value="0" class="fa fa-star"></span>
@@ -294,14 +294,14 @@
                                         </div>
                                         <div class="person-text rel">
                                             <img alt="" src="assets/images/reviews/ian.jpg">
-                                            <a title="" href="#">Ian Atienza</a>
+                                            <a title="" href="javascript:void(0)">Ian Atienza</a>
                                             <i>from Lipa City, Batangas</i>
                                         </div>
                                     </div>
 
                                     <div class="col-md-4 col-sm-6 hidden-xs">
                                         <div class="block-text rel zmin">
-                                            <a title="" href="#">Convenient and pretty well done</a>
+                                            <a title="" href="javascript:void(0)">Convenient and pretty well done</a>
                                             <div class="mark">My rating: 
                                                 <span class="rating-input">
                                                     <span data-value="0" class="fa fa-star"></span>
@@ -316,14 +316,14 @@
                                         </div>
                                         <div class="person-text rel">
                                             <img alt="" src="assets/images/reviews/james.jpg">
-                                            <a title="" href="#">James Buenviaje</a>
+                                            <a title="" href="javascript:void(0)">James Buenviaje</a>
                                             <i>Naga City, Philippines</i>
                                         </div>
                                     </div>
 
                                     <div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
                                         <div class="block-text rel zmin">
-                                            <a title="" href="#">Has a Great aftersales support</a>
+                                            <a title="" href="javascript:void(0)">Has a Great aftersales support</a>
                                             <div class="mark">My rating: 
                                                 <span class="rating-input">
                                                     <span data-value="0" class="fa fa-star"></span>
@@ -338,7 +338,7 @@
                                         </div>
                                         <div class="person-text rel">
                                             <img alt="" src="assets/images/reviews/edmund.jpg">
-                                            <a title="" href="#">Edmund Lai</a>
+                                            <a title="" href="javascript:void(0)">Edmund Lai</a>
                                             <i>Taguig City, Metro Manila</i>
                                         </div>
                                     </div>
@@ -348,7 +348,7 @@
                                 <div class="row">
                                     <div class="col-md-4 col-sm-6">
                                         <div class="block-text rel zmin">
-                                            <a title="" href="#">User-friendly for our store</a>
+                                            <a title="" href="javascript:void(0)">User-friendly for our store</a>
                                             <div class="mark">My rating: 
                                                 <span class="rating-input">
                                                     <span data-value="0" class="fa fa-star"></span>
@@ -363,13 +363,13 @@
                                         </div>
                                         <div class="person-text rel">
                                             <img alt="" src="assets/images/reviews/charles.jpg">
-                                            <a title="" href="#">Charles Dave Varela</a>
+                                            <a title="" href="javascript:void(0)">Charles Dave Varela</a>
                                             <i>Navotas City, Metro Manila</i>
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-sm-6 hidden-xs">
                                         <div class="block-text rel zmin">
-                                            <a title="" href="#">Great After Sales Support and Use-friendly</a>
+                                            <a title="" href="javascript:void(0)">Great After Sales Support and Use-friendly</a>
                                             <div class="mark">My rating: 
                                                 <span class="rating-input">
                                                     <span data-value="0" class="fa fa-star"></span>
@@ -384,13 +384,13 @@
                                         </div>
                                         <div class="person-text rel">
                                             <img alt="" src="assets/images/reviews/arnel.jpg">
-                                            <a title="" href="#">Arnel Supan</a>
+                                            <a title="" href="javascript:void(0)">Arnel Supan</a>
                                             <i>San Fernando City, Pampanga</i>
                                         </div>
                                     </div> 
                                     <div class="col-md-4 col-sm-6 hidden-xs">
                                         <div class="block-text rel zmin">
-                                            <a title="" href="#">Magandang Gamitin for Motorcycle Parts Shop</a>
+                                            <a title="" href="javascript:void(0)">Magandang Gamitin for Motorcycle Parts Shop</a>
                                             <div class="mark">My rating: 
                                                 <span class="rating-input">
                                                     <span data-value="0" class="fa fa-star"></span>
@@ -405,7 +405,7 @@
                                         </div>
                                         <div class="person-text rel">
                                             <img alt="" src="assets/images/reviews/kareen.jpg">
-                                            <a title="" href="#">Kareen Avorque</a>
+                                            <a title="" href="javascript:void(0)">Kareen Avorque</a>
                                             <i>Manila City</i>
                                         </div>
                                     </div>
