update pricing text

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -264,7 +264,7 @@
     <article style="background-color: rgba(0,0,0,0.85);padding: 100px 0;">
         <header class="container wow slideInRight">
             <h2 class="text-center section-header">TESTIMONIALS</h2>
-            <p class="lead text-center">What are clients has to say.</p>
+            <p class="lead text-center">What our clients have to say.</p>
         </header>
         <div class="carousel-reviews broun-block wow slideInRight" data-wow-delay="0.5s" >
             <div class="container">
@@ -433,13 +433,13 @@
                         <div class="col-sm-7 wow fadeInLeft">
                             <label>Business Size</label>
                             <select class="form-control" name="businessSize" [(ngModel)]="calculator.businessSize">
-                                <option value="0">Fewer than 10 employees</option>
-                                <option value="1">10 to 49 employees</option>
-                                <option value="2">50 to 249 employees</option>
+                                <option value="0">Fewer than 3 employees</option>
+                                <option value="1">4 to 10 employees</option>
+                                <option value="2">11 or More</option>
                             </select>
                         </div>
                         <div class="col-sm-5 wow fadeInRight">
-                            <span id="offline">POSLite offline can be use completely offline, meaning no need internet connection in order to manage your inventory efficiently. POSLite offline can be used and connect with multiple PC locally.</span>
+                            <span id="offline">To determine the resources that is needed please select the approriate number of employees that will be using the sytem.</span>
                         </div>
                     </div>
                 </div>
@@ -455,7 +455,7 @@
                         </div>
                         <div class="col-sm-5 wow fadeInRight">
                             <br/>
-                            <span id="offline">POSLite offline can be use completely offline, meaning no need internet connection in order to manage your inventory efficiently. POSLite offline can be used and connect with multiple PC locally.</span>
+                            <span id="offline">We offer offline and cloudbase solution, our reliable Cloud Network has 300% faster speed and 99% uptime.</span>
                         </div>
                     </div>
                 </div> 
@@ -487,7 +487,7 @@
                         </div>
                         <div class="col-sm-5 wow fadeInRight"> 
                             <br/>
-                            <span id="offline">Our customer is always right, our team always strives to provide the best product we can offer. After purchasing POSLite you'll get lifetime after sales support.</span>
+                            <span id="offline">Our customer is always right, our team always strives to provide the best product we can offer.</span>
                         </div>
                     </div>
                 </div>
