--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -439,7 +439,8 @@
                             </select>
                         </div>
                         <div class="col-sm-5 wow fadeInRight">
-                            <span id="offline">To determine the resources that is needed please select the approriate number of employees that will be using the sytem.</span>
+                        <br/>
+                            <span id="offline">To determine the resources that is needed please select the size that best describe your business.</span>
                         </div>
                     </div>
                 </div>
